--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,17 @@ asgiref==3.3.4
 autopep8==1.5.7
 dj-database-url==0.5.0
 Django==3.2.3
+flake8==3.9.2
+flake8-isort==4.0.0
 gunicorn==20.1.0
+isort==5.8.0
+mccabe==0.6.1
 Pillow==8.2.0
 psycopg2==2.8.6
 pycodestyle==2.7.0
+pyflakes==2.3.1
 pytz==2021.1
 sqlparse==0.4.1
+testfixtures==6.17.1
 toml==0.10.2
 whitenoise==5.2.0
