--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ psycopg2==2.8.6
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pytz==2021.1
+six==1.16.0
 sqlparse==0.4.1
 testfixtures==6.17.1
 toml==0.10.2
