--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.3.4
 autopep8==1.5.7
+certifi==2020.12.5
+chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.2.3
 django-countries==7.2.1
 flake8==3.9.2
 flake8-isort==4.0.0
 gunicorn==20.1.0
+idna==2.10
 isort==5.8.0
 mccabe==0.6.1
 Pillow==8.2.0
@@ -13,8 +16,11 @@ psycopg2==2.8.6
 pycodestyle==2.7.0
 pyflakes==2.3.1
 pytz==2021.1
+requests==2.25.1
 six==1.16.0
 sqlparse==0.4.1
+stripe==2.57.0
 testfixtures==6.17.1
 toml==0.10.2
+urllib3==1.26.4
 whitenoise==5.2.0
